ndb - bug#47530 - 3 (or more) replica with ndbmtd, signal sent to proxy instead of instance